fix: increase item height in ItemViewDialog for better visibility

--- a/src/pages/map/item-view-dialog/ItemViewDialog.scss
+++ b/src/pages/map/item-view-dialog/ItemViewDialog.scss
@@ -125,7 +125,7 @@
   }
 
   .item {
-    height: 40px;
+    height: 100px;
     width: 50%;
 
     img {
